# phyluce_rust

./: .gitignore  CITATION.cff  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml  rust-command-compatibility.md  rust-toolchain.toml
.github/workflows/: audit.yml  ci.yml
config/: phyluce.conf
crates/phyluce-align/: Cargo.toml
crates/phyluce-align/src/: charset.rs  concat.rs  lib.rs  mafft.rs  nexus.rs  sites.rs  summary.rs  trim.rs
crates/phyluce-assembly/: Cargo.toml
crates/phyluce-assembly/src/: explode.rs  get_fastas.rs  lib.rs  match_counts.rs  raw_reads.rs
crates/phyluce-cli/: Cargo.toml
crates/phyluce-cli/src/: align_summary_cmd.rs  assemblo_abyss_cmd.rs  assemblo_spades_cmd.rs  assemblo_velvet_cmd.rs  bootrep_support_cmd.rs  bootstrap_count_cmd.rs  chunk_fasta_cmd.rs  combine_reads_cmd.rs  concatenate_cmd.rs  conf.rs  convert_cmd.rs  convert_degen_bases_cmd.rs  easy_lastz_cmd.rs  easy_stampy_cmd.rs  explode_alignments_cmd.rs  explode_cmd.rs  extract_contigs_to_barcodes_cmd.rs  extract_taxa_cmd.rs  extract_taxon_fasta_cmd.rs  filter_alignments_cmd.rs  filter_bed_cmd.rs  format_paml_cmd.rs  gblocks_cmd.rs  genome_sequences_from_bed_cmd.rs  get_fastas_cmd.rs  get_trimmed_cmd.rs  incomplete_matrix_estimates_cmd.rs  informative_sites_cmd.rs  lastz_align.rs  main.rs  match_contigs.rs  match_contigs_to_barcodes_cmd.rs  match_counts_cmd.rs  merge_gzip_cmd.rs  merge_nextseq_cmd.rs  min_taxa_filter_cmd.rs  missing_data_cmd.rs  move_align_cmd.rs  multi_fasta_table_cmd.rs  multi_merge_table_cmd.rs  (+35 more)
crates/phyluce-config/: Cargo.toml
crates/phyluce-config/src/: lib.rs
crates/phyluce-external/: Cargo.toml
crates/phyluce-external/src/: lib.rs
crates/phyluce-genetrees/: Cargo.toml
crates/phyluce-genetrees/src/: bootstrap.rs  lib.rs  newick.rs
crates/phyluce-io/: Cargo.toml
crates/phyluce-io/src/: fastq.rs  lastz.rs  lib.rs  sql.rs  twobit.rs
docs/: command-reference-zh.md  index.md  user-manual-zh.md
tests/compat/: check_genetrees_synthetic.py  check_slice_sequence_from_genomes.py  check_twobit_genome_sequences.py  common.py  compare_align_assembly_batch2.py  compare_chunk_fasta_for_ncbi.py  compare_concatenate_alignments.py  compare_explode_get_fastas_file.py  compare_get_align_summary_data.py  compare_get_bed_from_fasta.py  compare_get_bed_from_lastz.py  compare_get_fasta_lengths.py  compare_get_fastas_from_match_counts.py  compare_get_fastq_lengths.py  compare_get_informative_sites.py  compare_get_match_counts.py  compare_get_trimmed_alignments.py  compare_match_contigs_to_probes.py  compare_missing_data_and_remove_empty.py  compare_p1_remaining.py  compare_probe_misc.py  compare_seqcap_align.py  compare_utilities_misc.py  run_all.py  run_fixtures.py
