[workspace]
resolver = "2"
members = [
    "crates/phyluce-config",
    "crates/phyluce-io",
    "crates/phyluce-external",
    "crates/phyluce-assembly",
    "crates/phyluce-align",
    "crates/phyluce-genetrees",
    "crates/phyluce-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["phyluce contributors"]
repository = "https://github.com/GUIBA-EX/phyluce_rust"

[profile.release]
lto = true
codegen-units = 1
# panic = "abort" deliberately NOT set: crates/phyluce-cli/src/parallel.rs
# relies on std::panic::catch_unwind to turn one worker's panic into an
# Err (instead of aborting the whole batch job), and cargo test's harness
# needs unwinding to isolate one failing test from the rest of the run.

# The profile 'dist' (cargo-dist) builds release binaries with. Thin LTO
# instead of the full LTO [profile.release] uses: dist compiles this
# across 4 target platforms per release, and full LTO's build-time cost
# multiplies by platform count in a way local/CI `cargo build --release`
# never pays; thin LTO keeps most of the runtime benefit for a much
# shorter build.
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.dependencies]
ahash = "0.8"
anyhow = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
flate2 = "1"
regex = "1"
csv = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
