[package]
name = "phyluce-assembly"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ahash = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
phyluce-io = { path = "../phyluce-io" }
phyluce-config = { path = "../phyluce-config" }
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
rustc-hash = "2.1"
