[package]
name = "phyluce-assembly"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ahash = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
phyluce-io = { path = "../phyluce-io" }
phyluce-config = { path = "../phyluce-config" }
rusqlite = { workspace = true }

[dev-dependencies]
rustc-hash = "2.1"
